--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -15,6 +15,8 @@
 
   <div id="container">
     <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
+    <p><a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">{{text}}</a></p>
   </div>
+
+  <ion-button (click)="onChangeText()">Change Text</ion-button>
 </ion-content>
